--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <div class="sidebar">
             <div class="icon-box">
                 <div class="side-text">
-                    Commandes
+                    Commander
                 </div>
                 <div class="icon">
                     <i class="fas fa-mobile-alt"></i>
@@ -43,7 +43,7 @@
 
             <div class="icon-box">
                 <div class="side-text">
-                    Livraison en ligne
+                    Livraison
                 </div>
                 <div class="icon">
                     <i class="fas fa-biking"></i>
@@ -52,7 +52,7 @@
 
             <div class="icon-box">
                 <div class="side-text">
-                    Payment
+                    Liste d'achats
                 </div>
                 <div class="icon">
                     <i class="fas fa-receipt"></i>
